packages/viewer/src/themes/default/layout.scss
@import "./_variables";
@import "./sass/_layout";
@import "./_overrides";

/* Place your extensions here to make migration to a new release easier. */
html {
  font-size: 14px;
}

body {
  overflow: hidden;
}

/* Firefox */
div {
  scrollbar-color: #999 #999;
  scrollbar-width: thin;
}

/* For Chrome and other browsers except Firefox */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-thumb:vertical {
  margin: 0 5px;
  background-color: #999;
  border-radius: 5px;
  -webkit-border-radius: 5px;
}

::-webkit-scrollbar-thumb:horizontal {
  margin: 0;
  background-color: #999;
  border-radius: 5px;
  -webkit-border-radius: 5px;
}

/* -- previously in components/index.css --
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
-- */

body .p-inputtext {
  border-radius: 0 !important;
}

body .p-checkbox .p-checkbox-box {
  border-radius: 0 !important;
}

body .p-dropdown {
  border-radius: 0 !important;
}

.p-inputgroup-addon:last-child, .p-inputgroup button:last-child, .p-inputgroup input:last-child {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.layout-logo > div {
  float: right;
  margin-left: 10px;
  font-size: 1.2rem;
  text-align: left;
  line-height: 1.1;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50px;
}

.layout-logo > img {
  height: 46px;
}

.p-formgroup-inline .p-field-checkbox > label, 
.p-formgroup-inline .p-field-radiobutton > label
{
  line-height: 1.4;
}

.p-inputtext.p-inputtext-sm {
  font-size: 0.875rem;
  padding: 0.33rem 0.49rem !important;
}

.p-button.p-button-sm {
  padding: 0.33rem 0.49rem !important;
}

.layout-sidebar {
  overflow-y: hidden;
  user-select: unset;
  -webkit-user-select: unset;
}

.layout-sidebar .layout-logo {
  height: 50px;
}

.layout-sidebar .layout-sidebar-panel {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: calc(100% - 50px);
}

.layout-sidebar #mainmenu {
  width: 55px;  
  overflow-y: auto;
  overflow-x: hidden;
}

.layout-sidebar #mainmenu::-webkit-scrollbar {
  width: 3px;
  height: 3px;
}


.layout-sidebar #mainmenu .main-menu-btn-image {
  background-size: contain !important;
  background-repeat: no-repeat !important;
  background-position-x: center !important;
  background-position-y: center !important;
}


.layout-wrapper.layout-static.layout-static-sidebar-inactive .layout-sidebar #mainmenu,
.layout-wrapper.layout-static.layout-mobile-sidebar-active .layout-sidebar #mainmenu {
  margin-bottom: 35px;
}


.layout-sidebar #content {
  position: relative;
  background-color: white;
  color: #303030;
  overflow-y: auto;
  flex: 1;
  width: calc(100% - 60px);
  padding: 5px;
  word-break: break-word;

  @media screen and (max-width: 1024px) {
      height: calc(100% - 35px);
  } 
}

.layout-wrapper.layout-static.layout-static-sidebar-inactive .layout-sidebar #content {
  padding: unset;
  display: none !important;
}

.layout-sidebar #content-bottom {
  position: relative;
  flex: none;
  bottom: 0px; 
  width: 100%;
  overflow-y: auto;
  max-height: 40%;

  @media screen and (max-width: 1024px) {
    max-height: 35%;
  }   
}

.layout-logo > img {
  height: 40px;
  margin: 5px 5px 5px 12px;
}

.layout-topbar .topbar-right>div {
  float: left;
}

.layout-footer {
  height: 35px;
  padding: 0.4em 0.3em;
  padding-left: 1em; 
}

.layout-footer .footer-text {
  display: inline-block;
  margin-right: 10px;
  margin-top: 3px;
  @media screen and (max-width: 667px) {
      display: none;
  }    
}

.layout-footer .footer-text a {
  color: white;
}
.layout-footer .footer-text a:hover {
  text-decoration: underline;
}

.footer-left {
  float: left;
}
.footer-left > div {
  float: right;
}
.footer-left button.p-link {
  font-size: 1.4em;
  color: white;
}

/*
.footer-right {
  float: right;
  display: flex;
  animation-duration: .5s;
  margin-top: -3px;
  text-align: right;
}
*/
.footer-right {
  position: absolute;
  display: flex;
  right: 3px;
  animation-duration: .5s;
  margin-top: -3px;
  max-width: 660px;
}

.footer-right .p-button {
  color: #ffffff !important;
}

.layout-topbar {
  position: unset;
  padding: 1.1em 1.5em 0em 1.5em;
  z-index: 1000; 
}

.layout-topbar .layout-menu-button {
  font-size: 9px;
}

.layout-topbar .layout-logo {
  position: absolute; 
  display: flex; 
  top: 0px; 
  left: 55px; 
  width: 345px; 
  color: rgb(0, 0, 0); 
  background-color: rgb(237, 240, 245);
}

.layout-static-sidebar-inactive .layout-topbar .layout-logo {
  color: unset; 
  background-color: unset;
}

.layout-topbar .layout-topbar-icons button span.layout-topbar-icon {
  font-size: 1em;
}

.layout-main {
  height: calc(100% - 50px);
  overflow: hidden;
}

.layout-main div#map {
  position: relative;
  width: 100%; 
  height: calc(100% - 18px);
  height: -moz-calc(100% - 27px);
  height: -webkit-calc(100% - 27px);
}

#themewizard .p-steps .p-steps-item:before {
  top: 120%;
}

.p-dropdown .p-dropdown-label {
  padding: 0.5em;
}

body .p-multiselect {
  border-radius: 0 !important;
}

.p-multiselect .p-multiselect-label {
  padding: 5px;
}

.p-multiselect .p-multiselect-clear-icon {
  color: rgba(0, 0, 0, 0.6);
  right: 2.357rem;
}

.viewer-mouse-position {
  min-width: 190px;
  padding: 0.5em;
}

#toggle-right {
  padding-left: 0.9em;
  padding-right: 0.9em;
}

.p-button:enabled:focus {
  background: rgba(103, 58, 183, 0.76);
}

.map-region-top-left,
.map-region-top-right,
.map-region-left,
.map-region-bottom-left,
.map-region-bottom-right {
  position: absolute;
  z-index: 1;
}

.map-region-top-left {
  top: 1.5em;
  left: 0.5em;
  /*width: inherit;*/
}

.map-region-top-right {
  top: 1.5em;
  right: 0.5em;
  width: inherit;
}

.map-region-left {
  top: 5em;
  left: 0.5em;
}

.map-region-left .p-button {
  border-radius: 0;
}

.map-region-bottom-left {
  bottom: 1.2em;
  left: 0.5em;
  width: inherit;
}

.map-region-bottom-right {
  bottom: 1.8em;
  right: 0.5em;
  width: inherit;
}

.map-region-left .p-button:hover,
.map-region-left .p-button:focus,
.map-region-top-left .p-button:hover,
.map-region-top-left .p-button:focus,
.map-region-top-right .p-button:hover,
.map-region-top-right .p-button:focus,
.map-region-bottom-left .p-button:hover,
.map-region-bottom-left .p-button:focus,
.map-region-bottom-right .p-button:hover,
.map-region-bottom-right .p-button:focus
{
  text-decoration: none;
  background: rgba(103, 58, 183, 0.76);
}

.p-button.active {
  background: rgba(103, 58, 183, 0.76);
}

.p-dialog-myfooter {
  border-top: 1px solid #c8c8c8;
  background: #fff;
  color: #333;
  padding: 0.571rem 1rem;
  text-align: right;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

#user_menu {
  position: absolute;
  right: 0;
  z-index: 9;
}

#user_menu .p-menu .p-menuitem-link {
  padding: 0.2rem 0.75rem;
}

.p-button.p-button-link {
  color: rgba(103, 58, 183, 0.76) !important;
  padding: 0 0.49rem !important;
}

#login-page label {
  font-size: 1.1em;
}

#login-page .login-logo {
  text-align: center;
  margin-bottom: 2rem;
}

#login-page .login-logo img {
  max-width: 300px;
}

#login-page .p-dialog-myfooter {
  text-align: center;
  margin-bottom: 1em;
}

.splashscreen {
  height: 100%;
}

.splashscreen > div {
  background-color: white;
  padding: 6rem;
}

.splashscreen a {
  text-decoration: underline;
}

/* Cookie Consent */
.CookieConsent {
  text-align: center;
}
.CookieConsent #rcc-confirm-button {
  background: rgb(255, 212, 45);
  border: 0px;
  border-radius: 0px;
  box-shadow: none;
  color: rgb(78, 80, 59);
  cursor: pointer;
  flex: 0 0 auto;
  padding: 10px 15px;
  margin: 15px;
  font-size: 14px;
}

.loadingscreen {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background-color: white;
  z-index: 9999
}

.loadingscreen > div {
  position: relative;
  height: 6px;
  top: 45%;
  width: 30%;
  left: 35%;
}

